--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   
   <body>
     <h1>Github web site HTML test!</h1>
-    Hello there, awesome person!
+    <img src="https://avatars0.githubusercontent.com/u/35876556?v=4">
+    
   </body>
 
 
