--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <h1>Github web site HTML test!</h1>
     <img src="https://avatars0.githubusercontent.com/u/35876556?v=4">
     
+    <ul>
+      <li>www.google.ca</li>
+      <li>www.youtube.com</li>
+      <li>www.netflix.ca</li>
+      <li>www.amazon.ca</li>
+     <ul>
+    
   </body>
 
 
