Add links to sites

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <img src="https://avatars0.githubusercontent.com/u/35876556?v=4">
     
     <ul>
-      <li>www.google.ca</li>
-      <li>www.youtube.com</li>
-      <li>www.netflix.ca</li>
-      <li>www.amazon.ca</li>
+      <li><a href="www.google.ca">Google</a></li>
+      <li><a href="www.youtube.com">Youtube</a></li>
+      <li><a href="www.netflix.ca"Netflix</a></li>
+      <li><a href="www.amazon.ca"</a></li>
      </ul>
     
   </body>
