Fix closing </a> tag errors

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <ul>
       <li><a href="www.google.ca">Google</a></li>
       <li><a href="www.youtube.com">Youtube</a></li>
-      <li><a href="www.netflix.ca"Netflix</a></li>
-      <li><a href="www.amazon.ca"</a></li>
+      <li><a href="www.netflix.ca">Netflix</a></li>
+      <li><a href="www.amazon.ca">Amazon</a></li>
      </ul>
     
   </body>
