Add link to css

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>My awesome web page</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   
   <body>
@@ -10,8 +11,8 @@
     <ul>
       <li><a href="www.google.ca">Google</a></li>
       <li><a href="www.youtube.com">Youtube</a></li>
-      <li><a href="www.netflix.ca"Netflix</a></li>
-      <li><a href="www.amazon.ca"</a></li>
+      <li><a href="www.netflix.ca">Netflix</a></li>
+      <li><a href="www.amazon.ca">Amazon</a></li>
      </ul>
     
   </body>
