--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <img src="https://avatars0.githubusercontent.com/u/35876556?v=4">
     
     <ul>
-      <li><a href="www.google.ca">Google</a></li>
-      <li><a href="www.youtube.com">Youtube</a></li>
-      <li><a href="www.netflix.ca">Netflix</a></li>
-      <li><a href="www.amazon.ca">Amazon</a></li>
+      <li><a href="https://www.google.ca">Google</a></li>
+      <li><a href="https://www.youtube.com">Youtube</a></li>
+      <li><a href="https://www.netflix.ca">Netflix</a></li>
+      <li><a href="https://www.amazon.ca">Amazon</a></li>
      </ul>
     
   </body>
